--- a/templates/leagues.html
+++ b/templates/leagues.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}FFH - Import League{% endblock %}
+{% block title %}FFH - Leagues{% endblock %}
 
 {% block navbar %}
 	<div class="topnav">
@@ -13,9 +13,5 @@
 {% endblock %}
 
 {% block body %}
-	<h2>Import New ESPN League</h2>
-	<h3>League imported successfully.</h3>
-	<p>League Type: {{league_type}}</p>
-	<p>League ID: {{league_id}}</p>
-	<a href="/account">Click here to return to account page.</a>
+	<p>Leagues</p>
 {% endblock %}
