--- a/templates/import_league.html
+++ b/templates/import_league.html
@@ -1,6 +1,16 @@
 {% extends "layout.html" %}
 
-{% block title %}Import League{% endblock %}
+{% block title %}FFH - Import League{% endblock %}
+
+{% block navbar %}
+	<div class="topnav">
+		<a class="fLeft" href="/home">Home</a>
+		<a class="fLeft" href="/account">Account</a>
+		<a class="fLeft active" href="/leagues">Leagues</a>
+
+		<a class="fRight" href="/logout">Logout</a>
+	</div>
+{% endblock %}
 
 {% block body %}
 	<h2>Import New ESPN League</h2>
