--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,13 +1,17 @@
 body {
 	margin: 0;
+	background-color: white;
 }
 
 h1 {
 	margin-top: 0;
 	text-align: center;
-	background-color: #1729e8;
+	background-color: white;
 	font-size: 4em;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
+	color: #eddc21;
+	-webkit-text-stroke-width: 2px;
+  	-webkit-text-stroke-color: black;
 }
 
 h2 {
@@ -16,22 +20,20 @@ h2 {
 }
 
 table {
-	border: 1px solid black;
-	width: 100%;
-	margin-top: 2vh;
+	border: 2px sold black;
+	width: 80%;
+	background-color: white;
 }
 
 td  {
-	border: 1px solid black;
-	text-align: center;
-	width: 25%;
-}
-
-th {
-	border: 1px solid black;
 	text-align: center;
 	width: 25%;
 	font-size: 20px;
+}
+
+th {
+	text-align: center;
+	font-size: 40px;
 }
 
 .form {
@@ -46,6 +48,7 @@ th {
   overflow: hidden;
   background-color: #1729e8;
   font-size: 1.5em;
+  padding: 10px;
 }
 
 .topnav a {
@@ -69,4 +72,9 @@ th {
 
 .fRight {
 	float: right;
+}
+
+.fCenter {
+	margin-left: auto;
+	margin-right: auto;
 }
