--- a/templates/account.html
+++ b/templates/account.html
@@ -13,5 +13,24 @@
 {% endblock %}
 
 {% block body %}
-	<p>Account</p>
+	{% if username %}
+		<!-- There is a user logged in. -->
+		<h2>Welcome, {{ username }}</h2>
+		<table class="fCenter">
+			<tr>
+				<th>Team</th>
+				<th>League</th>
+				<th>Record</th>
+			</tr>
+			{% for team in teams %}
+				<tr>
+					<td>{{ team.name }}</td>
+					<td>{{ team.league }}</td>
+					<td>{{ team.wins }} - {{ team.loses }}</td>
+				</tr>
+			{% endfor %}
+		</table>
+	{% else %}
+		<!-- There is no user logged in. -->
+	{% endif %}
 {% endblock %}
