--- a/templates/account.html
+++ b/templates/account.html
@@ -8,7 +8,9 @@
 		<a class="fLeft active" href="/account">Account</a>
 		<a class="fLeft" href="/leagues">Leagues</a>
 
-		<a class="fRight" href="/logout">Logout</a>
+		{% if username %}
+			<a class="fRight" href="/logout">Logout</a>
+		{% endif %}
 	</div>
 {% endblock %}
 
