--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,12 @@
 		<a class="fLeft" href="/account">Account</a>
 		<a class="fLeft" href="/leagues">Leagues</a>
 
-		<a class="fRight" href="/login">Login</a>
-		<a class="fRight" href="/create_account">Create Account</a>
-		<a class="fRight" href="/logout">Logout</a>
+		{% if username %}
+			<a class="fRight" href="/logout">Logout</a>
+		{% else %}
+			<a class="fRight" href="/login">Login</a>
+			<a class="fRight" href="/create_account">Create Account</a>
+		{% endif %}
 	</div>
 {% endblock %}
 
