--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -6,7 +6,6 @@ body {
 h1 {
 	margin-top: 0;
 	text-align: center;
-	background-color: #5f9ea0;
 	font-family: "Papyrus", fantasy;
 	font-size: 4.5em;
 	padding-bottom: 5px;
@@ -37,6 +36,10 @@ th {
 	font-size: 40px;
 }
 
+a {
+	text-decoration: none;
+}
+
 .form {
 	font-size: 1.5em;
 }
@@ -61,11 +64,11 @@ th {
 
 .topnav a:hover, .topnav b:hover {
   background-color: #2d63ed;
+  cursor: pointer;
 }
 
 .topnav a.active {
   background-color: #e9f018;
-  text-decoration: underline;
 }
 
 .fLeft {
