--- a/templates/import_successful.html
+++ b/templates/import_successful.html
@@ -11,16 +11,20 @@
 		{% if username %}
 			<a class="fRight" href="/logout">Logout</a>
 		{% else %}
-			<a class="fRight" href="/login">Login</a>
 			<a class="fRight" href="/create_account">Create Account</a>
+			<a class="fRight" href="/login">Login</a>
 		{% endif %}
 	</div>
 {% endblock %}
 
 {% block body %}
-	<h2>Import New ESPN League</h2>
-	<h3>League imported successfully.</h3>
-	<p>League Type: {{league_type}}</p>
-	<p>League ID: {{league_id}}</p>
-	<a href="/account">Click here to return to account page.</a>
+	{% if username %}
+		<h2>Import New ESPN League</h2>
+		<h3>League imported successfully.</h3>
+		<p>League Type: {{league_type}}</p>
+		<p>League ID: {{league_id}}</p>
+		<a href="/account">Click here to return to account page.</a>
+	{% else %}
+		<h2 class="fCenter">Must be logged in to view page.</h2>
+	{% endif %}
 {% endblock %}
