--- a/templates/leagues.html
+++ b/templates/leagues.html
@@ -11,12 +11,16 @@
 		{% if username %}
 			<a class="fRight" href="/logout">Logout</a>
 		{% else %}
-			<a class="fRight" href="/login">Login</a>
 			<a class="fRight" href="/create_account">Create Account</a>
+			<a class="fRight" href="/login">Login</a>
 		{% endif %}
 	</div>
 {% endblock %}
 
 {% block body %}
-	<p>Leagues</p>
+	{% if username %}
+		<p>Leagues</p>
+	{% else %}
+		<h2 class="fCenter">Must be logged in to view page.</h2>
+	{% endif %}
 {% endblock %}
