--- a/templates/account.html
+++ b/templates/account.html
@@ -23,15 +23,15 @@
 		<h2>Welcome, {{ username }}</h2>
 		<table class="fCenter">
 			<tr>
-				<th>Team</th>
-				<th>League</th>
-				<th>Record</th>
+				<th class="League">League</th>
+				<th class="Team">Team</th>
+				<th class="Record">W-L</th>
 			</tr>
 			{% for team in teams %}
-				<tr>
-					<td>{{ team.name }}</td>
-					<td>{{ team.league }}</td>
-					<td>{{ team.wins }} - {{ team.loses }}</td>
+				<tr class="rBorder">
+					<td class="League"><a href="/leagues/{{ team.league }}">{{ team.league }}</a></td>
+					<td class="Team rBorder"><a href="/team/{{ team.league }}/{{ team.team }}">{{ team.team }}</a></td>
+					<td class="Record"><a href="/team/{{ team.team }}/{{ team.team }}">{{ team.record }}</a></td>
 				</tr>
 			{% endfor %}
 		</table>
