--- a/templates/home.html
+++ b/templates/home.html
@@ -18,5 +18,17 @@
 {% endblock %}
 
 {% block body %}
-	<p>Home</p>
+	{% if successful_login %}
+	<!-- TODO Successfully modify and pass variables to
+	include home page functionality of welcoming user after sign include
+	and having a default message prior to sign in-->
+		<p> Welcome back {{userLog}} </p>
+	{% else %}
+		<p> Welcome to Funky Fantasy Hosting! If you already have an account
+		click on Login in the top right of your screen. If you are a new member
+		and are looking for an alternate site to host guillitine, vampire, or 
+		pirate fantasy football leagues, you've come to the right place. Click on 
+		create account in the top right of your screen to begin your journey now!</p>
+	{% endif %}
+
 {% endblock %}
