--- a/templates/login.html
+++ b/templates/login.html
@@ -8,8 +8,12 @@
 		<a class="fLeft" href="/account">Account</a>
 		<a class="fLeft" href="/leagues">Leagues</a>
 
-		<a class="fRight" href="/create_account">Create Account</a>
-		<a class="fRight active" href="/login">Login</a>
+		{% if username %}
+			<a class="fRight" href="/logout">Logout</a>
+		{% else %}
+			<a class="fRight" href="/create_account">Create Account</a>
+			<a class="fRight active" href="/login">Login</a>
+		{% endif %}
 	</div>
 {% endblock %}
 
@@ -18,11 +22,16 @@
 	<!-- change value of action to represent appropriate location to send form data
 	(may need modified strategy since server will need to verify and respond)-->
 	
-	<form action="/action_page.php" method="get">
+	<form action="" method="post">
 	  <label for="username/email">Username or Email Adress:</label>
-	  <input type="text" id="username/email" name="username/email"><br><br>
+	  <input type="text" id="username/email" name="username" value="{{request.form.username }}"><br><br>
 	  <label for="password">Password:</label>
-	  <input type="text" id="password" name="password"><br><br>
+	  <input type="text" id="password" name="password" value="{{request.form.password }}"><br><br>
 	  <input type="submit" value="Submit">
 	</form>
+	
+	{% if login_message %}
+		<p> {{login_message}}</p>
+	{% endif %}
+	
 {% endblock %}
