Fixed some random errors re View and import_league

--- a/templates/import_league.html
+++ b/templates/import_league.html
@@ -37,7 +37,7 @@
 			<label for="league_id" class="label_text">ESPN League ID: </label>
 			<input type="text" id="league_id" name="league_id">
 		</form>
-	{% else if %}
+	{% else %}
 		<h2 class="fCenter">Must be logged in to view page.</h2>
 	{% endif %}
 {% endblock %}
