--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -149,3 +149,18 @@ a {
 	margin-top: 0px;
 	margin-bottom: 10px;
 }
+
+#player {
+	margin: auto;
+}
+
+#player th {
+	font-size: 30px;
+	white-space: nowrap;
+	padding: 10px;
+}
+
+#player td {
+	font-size: 10px;
+	width: auto;
+}
