--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
 		{% endif %}
 		</div>
 	{% endblock %}
-	<h1>Funky Fantasy Hosting</h1>
+	<h1><a href="/home">Funky Fantasy Hosting</a></h1>
 	{% block body %}
 	{% endblock %}
 </body>
