--- a/templates/team.html
+++ b/templates/team.html
@@ -19,6 +19,7 @@
 
 {% block body %}
 	{% if username %}
+		<h2>Current Roster</h2>
 		<table class="fCenter">
 			<tr>
 				<th class="Pos">Pos</th>
