--- a/templates/account.html
+++ b/templates/account.html
@@ -8,7 +8,7 @@
 		<a class="fLeft active" href="/account">Account</a>
 		<a class="fLeft" href="/leagues">Leagues</a>
 
-		{% if username %}
+		{% if session["username"] %}
 			<a class="fRight" href="/logout">Logout</a>
 		{% else %}
 			<a class="fRight" href="/create_account">Create Account</a>
