--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -8,7 +8,7 @@
 		<a class="fLeft" href="/account">Account</a>
 		<a class="fLeft" href="/leagues">Leagues</a>
 
-		{% if username %}
+		{% if session["username"] %}
 			<a class="fRight" href="/logout">Logout</a>
 		{% else %}
 			<a class="fRight active" href="/create_account">Create Account</a>
@@ -18,28 +18,23 @@
 {% endblock %}
 
 {% block body %}
-	<p>Fill out your account information below to register an account with Funky Fantasy Hosting!</p>
-	<!-- change value of action to represent appropriate location to send form data
-	(may need modified strategy since server will need to verify and respond)-->
-	
-	<form action="" method="get">
+	<h4>{% block h4 %}Fill out your account information below to register an account with Funky Fantasy Hosting! {% endblock %}</h4>
+	<br>
+
+	<form action="" method="post">
 	  <label for="fname">First name:</label>
-	  <input type="text" id="fname" name="fname"><br><br>
+	  <input type="text" id="fname" name="fname" value="{{request.form.fname }}"><br><br>
 	  <label for="lname">Last name:</label>
-	  <input type="text" id="lname" name="lname"><br><br>
+	  <input type="text" id="lname" name="lname" value="{{request.form.lnane }}"><br><br>
 	  <label for="username">Username:</label>
 	  <input type="text" id="username" name="username" value="{{request.form.username }}"><br><br>
 	  <label for="screen name">Screen name:</label>
-	  <input type="text" id="screen name" name="screen name"><br><br>
+	  <input type="text" id="screen name" name="screen name" value="{{request.form.screenName }}"><br><br>
 	  <label for="email">Email address:</label>
-	  <input type="text" id="email" name="email"><br><br>
+	  <input type="text" id="email" name="email" value="{{request.form.email }}"><br><br>
 	  <label for="password">Password:</label>
-	  <input type="text" id="password" name="password"><br><br>
+	  <input type="text" id="password" name="password" value="{{request.form.password }}"><br><br>
 	  <input type="submit" value="Submit">
 	</form>
 	
-	<!-- Not properly working, compare to functioning equivalent in login-->
-	{% if create_account_message %}
-		<p> {{create_account_message}}</p>
-	{% endif %}
 {% endblock %}
