--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 		<a class="fLeft" href="/account">Account</a>
 		<a class="fLeft" href="/leagues">Leagues</a>
 
-		{% if username %}
+		{% if session["username"] %}
 			<a class="fRight" href="/logout">Logout</a>
 		{% else %}
 			<a class="fRight" href="/create_account">Create Account</a>
@@ -18,9 +18,8 @@
 {% endblock %}
 
 {% block body %}
-	<p>Enter your login information below</p>
-	<!-- change value of action to represent appropriate location to send form data
-	(may need modified strategy since server will need to verify and respond)-->
+	<h4>{% block h4 %}Enter your login credentials below to access your Funky Fantasy Hosting account {% endblock %}</h4>
+	<br>
 	
 	<form action="" method="post">
 	  <label for="username/email">Username or Email Adress:</label>
@@ -29,9 +28,4 @@
 	  <input type="text" id="password" name="password" value="{{request.form.password }}"><br><br>
 	  <input type="submit" value="Submit">
 	</form>
-	
-	{% if login_message %}
-		<p> {{login_message}}</p>
-	{% endif %}
-	
 {% endblock %}
