--- a/templates/import_league.html
+++ b/templates/import_league.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block body %}
-	{% if username %}
+	{% if session["username"] %}
 		<h2>Import New ESPN League</h2>
 		{% if message %}
 			<h3>{{ message }}</h3>
