--- a/templates/leagues.html
+++ b/templates/leagues.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block body %}
-	{% if username %}
+	{% if session["username"] %}
 		<div class="container">
 			<div>
 				<table class="fCenter" id="standings">
