--- a/templates/team.html
+++ b/templates/team.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block body %}
-	{% if username %}
+	{% if session["username"] %}
 		<h2>Current Roster</h2>
 		<table class="fCenter">
 			<tr>
