--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -6,7 +6,7 @@
 	<div class="topnav">
 		<a class="fLeft" href="/home">Home</a>
 		<a class="fLeft" href="/account">Account</a>
-		<a class="fLeft" href="/leagues">Leagues</a>
+		<a class="fLeft" href="/league">League</a>
 
 		{% if session["username"] %}
 			<a class="fRight" href="/logout">Logout</a>
