--- a/templates/account.html
+++ b/templates/account.html
@@ -38,10 +38,11 @@
 				<tr class="rBorder">
 					<td class="League"><a href="/league/{{ team.league }}">{{ team.league }}</a></td>
 					<td class="Team rBorder"><a href="/team/{{ team.league }}/{{ team.team }}">{{ team.team }}</a></td>
-					<td class="Record"><a href="/team/{{ team.team }}/{{ team.team }}">{{ team.record }}</a></td>
+					<td class="Record"><a href="/league/{{ team.league }}">{{ team.record }}</a></td>
 				</tr>
 			{% endfor %}
 		</table>
+		<h3><a href="/new_league">Click here to import a league from ESPN.</a></h3>
 	{% else %}
 		<!-- There is no user logged in. -->
 		<h2 href="/login" class="fCenter">Must be logged in to view page.</h2>
