--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -58,6 +58,20 @@ a {
 	color: black;
 }
 
+button {
+	border: 2px solid black;
+	background-color: white;
+	border-color: #5f9ea0;
+	color: black;
+	padding: 5px;
+	border-radius: 10%;
+}
+
+button:hover {
+	background-color: #5f9ea0;
+	cursor: pointer;
+}
+
 .blank {
 	color: white;
 }
@@ -93,12 +107,12 @@ a {
   background-color: #e9f018;
 }
 
-.Pos, .Record, .Points {
+.Pos, .Record, .Points, .Swap {
 	width: 10%;
 }
 
 .Name, .Opp {
-	width: 40%;
+	width: 35%;
 }
 
 .League, .Team {
@@ -131,6 +145,15 @@ a {
 
 .container {
 	display: flex;
+}
+
+.Selected {
+	background-color: #e9f018;
+	border-color: #e9f018;
+}
+
+.Selected:hover {
+	background-color: #e9f018;
 }
 
 .container > div {
