Join League skeleton functionality/code
main.py needs skeleton filled in to call appropriate function checking if the user inputted team name corresponds to an existing team from the user inputted league_id. Also will need to register this user/team combo to DB

--- a/templates/account.html
+++ b/templates/account.html
@@ -35,7 +35,8 @@
 				</tr>
 			{% endfor %}
 		</table>
-		<h3><a href="/new_league">Click here to import a league from ESPN.</a></h3>
+		<h3><a href="/new_league">Click here to import a league from ESPN(commisioner).</a></h3>
+		<h3><a href="/join_league">Click here to join an already imported league from ESPN(member).</a></h3>
 	{% else %}
 		<!-- There is no user logged in. -->
 		<h2 href="/login" class="fCenter">Must be logged in to view page.</h2>
