FA page Front End

--- a/templates/league.html
+++ b/templates/league.html
@@ -47,6 +47,7 @@
 				</table>
 			</div>
 		</div>
+		<h3><a href="/freeAgents">Click here to view your league's available free agents.</a></h3>
 	{% else %}
 		<h2 class="fCenter">Must be logged in to view page.</h2>
 	{% endif %}
