--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,9 +3,10 @@
 <head>
 	<title>{% block title %}CPS43 Catering{% endblock %}</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheet.css') }}" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	{% block head %}{% endblock %}
 </head>
-<body>
+<body {% block body_attrs %}{% endblock %}>
 	{% block navbar %}
 		<div class="topnav">
 		<a class="fLeft active" href="/home">Home</a>
