Fixed player loading and implemented import league

--- a/templates/import_league.html
+++ b/templates/import_league.html
@@ -25,11 +25,11 @@
 		{% endif %}
 		<form action="" method="post">
 			<p class="form">Select League Type:</p>
-			<input type="radio" id="guillotine" name="league_type" value="guillotine">
+			<input type="radio" id="guillotine" name="league_type" value="0">
 			<label for="guillotine" class="radio_button">Guillotine</label><br>
-			<input type="radio" id="vampire" name="league_type" value="vampire">
+			<input type="radio" id="vampire" name="league_type" value="1">
 			<label for="vampire" class="radio_button">Vampire</label><br>
-			<input type="radio" id="pirate" name="league_type" value="pirate">
+			<input type="radio" id="pirate" name="league_type" value="2">
 			<label for="pirate" class="radio_button">Pirate</label><br>
 			<br />
 			<label for="league_id" class="label_text">ESPN League ID: </label>
