--- a/templates/free_agent.html
+++ b/templates/free_agent.html
@@ -27,13 +27,21 @@
 				<th class="Team">Position</th>
 				<th class="Pos">Add</th>
 			</tr>
-			{% for player in freeAgents %}
-				<tr class="rBorder">
-					<td class="League">{{ player.name }}</a></td>
-					<td class="Team rBorder">{{ player.position }}</td>
-					<td class="Pos">Add Player</td>
-				</tr>
-			{% endfor %}
+			{% if freeAgents %}
+				{% for player in freeAgents %}
+					<tr class="rBorder">
+						<td class="League">{{ player.name }}</a></td>
+						<td class="Team rBorder">{{ player.position }}</td>
+						<td class="Pos">Add Player</td>
+					</tr>
+				{% endfor %}
+			{% else %}
+					<tr class="rBorder">
+						<td class="Team rBorder">NA<td>
+						<td>NA</td>
+						<td>NA<td>
+					</tr>
+			{% endif %}
 		</table>
 	{% else %}
 		<!-- There is no user logged in. -->
