--- a/templates/free_agent.html
+++ b/templates/free_agent.html
@@ -30,7 +30,7 @@
 			{% if freeAgents %}
 				{% for player in freeAgents %}
 					<tr class="rBorder">
-						<td class="League">{{ player.name }}</a></td>
+						<td class="League"><a href={{ player.link }} target="_blank" rel="noopener noreferrer">{{ player.name }}</a></td>
 						<td class="Team rBorder">{{ player.position }}</td>
 						<td class="Pos">Add Player</td>
 					</tr>
